Fixed Sierra URL Validators and refresh buttons. Also fixed textarea overflow issues on the result pane. URL copied modal and Sierra URL bib links now open new tabs instead of refreshing the app.

--- a/CSS/urlResolver.css
+++ b/CSS/urlResolver.css
@@ -278,6 +278,7 @@ table tr:nth-child(odd){
 
 #urlPastebin{
     white-space: nowrap;
+    max-height:70vh;
 }
 
 #reportrange{
